Add detekt
Added detekt with
 * --all-rules: Activates all available (even unstable) rules.
 * --analysis-mode=full Enables full type resolution
 * failonerror="true": fail the build on errors

# Conflicts:
#	src/main/kotlin/com/janusa/seaty/AuthController.kt